--- a/mokepon/style.css
+++ b/mokepon/style.css
@@ -1,8 +1,8 @@
-.title {
-    color: lightgreen;
-    width: 325px;
-    height: 50px;
-    background-color: teal;
+@import url('https://fonts.googleapis.com/css2?family=Fredoka&family=Poppins:wght@300&display=swap');
+
+body {
+    font-family: 'Poppins', sans-serif;
+    background-color: #041562;
 }
 
 #select-pet {
@@ -12,10 +12,50 @@
     align-items: center;
 }
 
+.title {
+    color: white;
+    font-size: 32px;
+    font-family: 'Fredoka', sans-serif;
+}
+
+.subtitle {
+    color: white;
+    font-size: 20px;
+}
+
+.cards {
+    display: flex;
+    gap: 10px;
+}
+
 .mokepon-cards {
-    width: 100px;
+    width: 190px;
     height: 100px;
-    background: aquamarine;
+    background: #11468F;
     padding: 10px;
     box-sizing: border-box;
+    border-radius: 20px;
+    display: flex;
+    color: white;
+    justify-content: center;
+    align-items: center;
+}
+
+.mokepon-cards img {
+    width: 80px;
+    margin: 10px
+}
+#button-pet {
+    width: 180px;
+    height: 40px;
+    border-radius: 20px;
+    background: transparent;
+    border: 2px solid white;
+    color: white;
+    font-family: 'Poppins', sans-serif;
+    margin-top: 30px;
+}
+
+input {
+    display: none;
 }
