--- a/mokepon/style.css
+++ b/mokepon/style.css
@@ -59,3 +59,19 @@ body {
 input {
     display: none;
 }
+
+#select-attack {
+    flex-direction: column;
+    align-items: center;
+}
+
+.button-attack {
+    background-color: #11468F;
+    padding: 10px;
+    box-sizing: border-box;
+    border-radius: 20px;
+    border-color: transparent;
+    width: 100px;
+    color: white;
+    font-family: 'Poppins', sans-serif;
+}
