--- a/mokepon/style.css
+++ b/mokepon/style.css
@@ -75,3 +75,27 @@ input {
     color: white;
     font-family: 'Poppins', sans-serif;
 }
+
+#messages {
+    width: 280px;
+    background: #EEEEEE;
+    padding: 20px;
+    margin-top: 20px;
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+#button-reset {
+    border: none;
+    color: #11468F;
+    font-family: 'Poppins', sans-serif;
+}
+
+.attacks {
+    display: grid;
+    grid-template-columns: 100px 100px;
+    
+}
